Fix header z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -1657,7 +1657,7 @@ input .autoresize {
     padding: 0;
     position: sticky;
     top: 0;
-    z-index: 3;
+    z-index: 4;
   }
   nav .logo-wrapper {
 
